Right align the last dropdown to avoid screen cutoff

--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -58,6 +58,10 @@ Navbar
     vertical-align: middle;
 }
 
+ul.dropdown-menu-right {
+    right: 0;
+}
+
 /* ==========================================================================
 Logo styles
 ========================================================================== */
